--- a/srcs/nginx/srcs/default.conf
+++ b/srcs/nginx/srcs/default.conf
@@ -1,7 +1,7 @@
 server {
         listen 80;
         listen [::]:80;
-        return 301 https://192.168.99.240$request_uri;
+        return 301 https://192.168.99.69$request_uri;
 }
 server {
 	listen 443 ssl ;
@@ -13,6 +13,15 @@ server {
 	root /www;
 
 	index index.html index.php;
+
+	location /wordpress {
+		return 307 http://192.168.99.69:5050;
+	}
+
+	location /phpmyadmin/ {
+		proxy_set_header X-Forwarded-Proto https;
+		proxy_pass http://192.168.99.69:5000/;
+	}
 
 	location / {
 		try_files $uri $uri/ =404;
