--- a/srcs/wordpress/srcs/default.conf
+++ b/srcs/wordpress/srcs/default.conf
@@ -3,13 +3,14 @@ server {
 	listen [::]:5050;
 
 	root /www/wordpress;
-	
-	index index.php index.html index.htm;
+
+	index index.php;
 
 	location / {
 		try_files $uri $uri/ =404;
 	}
 	location ~ \.php$ {
+		fastcgi_index         index.php;
         include               fastcgi.conf;
         fastcgi_pass          0.0.0.0:9000;
     }
