persistent volume and ftps done

--- a/srcs/mysql/Dockerfile
+++ b/srcs/mysql/Dockerfile
@@ -6,12 +6,12 @@ COPY init.sh /
 
 RUN chmod +x init.sh
 
-RUN openrc reboot && /etc/init.d/mariadb setup
+# RUN openrc reboot && /etc/init.d/mariadb setup
 
 COPY srcs/mariadb-server.cnf /etc/my.cnf.d
 
-COPY srcs/create_tables.sql .
-COPY srcs/wp_db.sql .
+COPY srcs/create_tables.sql /
+COPY srcs/wp_db.sql /
 
 EXPOSE 3306
 
