--- a/yamls/mysql-dep-srvc.yaml
+++ b/yamls/mysql-dep-srvc.yaml
@@ -2,9 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: mysql-service
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
-  name: mysql-service
+  labels:
+    app: mysql
 spec:
   selector:
     app: mysql
@@ -12,12 +14,26 @@ spec:
     - port: 3306
       targetPort: 3306
   type: ClusterIP
-  
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+  labels:
+    app: mysql
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql-service
+  name: mysql-deployment
+  labels:
+    app: mysql
 spec:
   replicas: 1
   template:
@@ -26,11 +42,18 @@ spec:
         app: mysql
     spec:
       containers:
-        - name: mysql
-          image: local-mysql
-          imagePullPolicy: Never
-          ports:
-            - containerPort: 3306
+      - name: mysql
+        image: local-mysql
+        imagePullPolicy: Never
+        ports:
+          - containerPort: 3306
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
   selector:
     matchLabels:
-      app: mysql 
+      app: mysql
