persistent volume done

--- a/srcs/mysql/Dockerfile
+++ b/srcs/mysql/Dockerfile
@@ -2,10 +2,6 @@ FROM alpine:3.12
 
 RUN apk update && apk add openrc mariadb mariadb-common mariadb-client bash
 
-COPY init.sh /
-
-RUN chmod +x init.sh
-
 # RUN openrc reboot && /etc/init.d/mariadb setup
 
 COPY srcs/mariadb-server.cnf /etc/my.cnf.d
@@ -13,6 +9,8 @@ COPY srcs/mariadb-server.cnf /etc/my.cnf.d
 COPY srcs/create_tables.sql /
 COPY srcs/wp_db.sql /
 
-EXPOSE 3306
+COPY init.sh /
+COPY srcs/health.sh /
+RUN chmod +x init.sh health.sh
 
-ENTRYPOINT ["sh", "/init.sh"]
+CMD ["sh", "/init.sh"]
