--- a/srcs/ftps/Dockerfile
+++ b/srcs/ftps/Dockerfile
@@ -1,9 +1,14 @@
 FROM alpine:3.12
 
-RUN apk add vsftpd openssl openrc
+RUN apk add vsftpd openssl openrc bash
 COPY srcs/vsftpd.conf /etc/vsftpd/vsftpd.conf
-COPY srcs/init.sh /
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj '/C=MA/ST=rhamna/L=Bengruir/O=1337/CN=vsftpd' -keyout /etc/vsftpd/vsftpd.key -out /etc/vsftpd/vsftpd.crt
-EXPOSE 21
 
-ENTRYPOINT ["sh", "/init.sh"]
+RUN mkdir -p /home/admin
+RUN adduser admin -D && echo "admin:123" |chpasswd
+RUN chmod 750 /home/admin && chown -R admin: /home/admin
+COPY srcs/init.sh /
+COPY srcs/health.sh /
+RUN chmod +x init.sh health.sh
+
+CMD ["sh", "/init.sh"]
