--- a/srcs/ftps/srcs/vsftpd.conf
+++ b/srcs/ftps/srcs/vsftpd.conf
@@ -22,8 +22,8 @@ local_umask=022
 
 ### SSL ###
 
-rsa_cert_file=/vsftpd.pem
-rsa_private_key_file=/vsftpd.key
+rsa_cert_file=/etc/vsftpd/vsftpd.crt
+rsa_private_key_file=/etc/vsftpd/vsftpd.key
 ssl_enable=YES
 force_local_data_ssl=YES
 force_local_logins_ssl=YES
