--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -13,9 +13,12 @@ COPY srcs/index.html /www
 
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj '/C=MA/ST=rhamna/L=Bengruir/O=1337/CN=localhost' -keyout /etc/nginx/ssl/localhost.key -out /etc/nginx/ssl/localhost.crt
 
+RUN     adduser -D user
+RUN     echo "user:password"|chpasswd
+RUN     ssh-keygen -A
+
 COPY srcs/init.sh /
-RUN chmod +x init.sh
+COPY srcs/health.sh /
+RUN chmod +x init.sh health.sh
 
-EXPOSE 80 443 22
-
-ENTRYPOINT ["sh", "/init.sh"]
+CMD ["sh", "/init.sh"]
