--- a/srcs/nginx/srcs/default.conf
+++ b/srcs/nginx/srcs/default.conf
@@ -11,6 +11,7 @@ server {
 	ssl_certificate_key ssl/localhost.key;
 
 	root /www;
+	error_page 497 https://192.168.99.69/$request_uri;
 
 	index index.html index.php;
 
