--- a/yamls/influxdb.dep.srvc.yaml
+++ b/yamls/influxdb.dep.srvc.yaml
@@ -2,25 +2,25 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service
+  name: influxdb-service
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
   labels:
-    app: mysql
+    app: influxdb
 spec:
   selector:
-    app: mysql
+    app: influxdb
   ports:
-    - port: 3306
-      targetPort: 3306
+    - port: 8086
+      targetPort: 8086
   type: ClusterIP
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: influxdb-pv-claim
   labels:
-    app: mysql
+    app: influxdb
 spec:
   accessModes:
     - ReadWriteOnce
@@ -31,22 +31,22 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql-deployment
+  name: influxdb-deployment
   labels:
-    app: mysql
+    app: influxdb
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: mysql
+        app: influxdb
     spec:
       containers:
-      - name: mysql
-        image: local-mysql
+      - name: influxdb
+        image: local-influxdb
         imagePullPolicy: Never
         ports:
-          - containerPort: 3306
+          - containerPort: 8086
         livenessProbe:
           exec:
             command:
@@ -55,12 +55,17 @@ spec:
           initialDelaySeconds: 5
           periodSeconds: 1
         volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
+        - name: influxdb-persistent-storage
+          mountPath: /root/.influxdb
+        - name: dockersock
+          mountPath: "/var/run/docker.sock"
       volumes:
-      - name: mysql-persistent-storage
+      - name: influxdb-persistent-storage
         persistentVolumeClaim:
-          claimName: mysql-pv-claim
+          claimName: influxdb-pv-claim
+      - name: dockersock
+        hostPath:
+          path: /var/run/docker.sock 
   selector:
     matchLabels:
-      app: mysql
+      app: influxdb
