--- a/yamls/nginx_dep-srvc.yaml
+++ b/yamls/nginx_dep-srvc.yaml
@@ -29,9 +29,6 @@ metadata:
     app: nginx
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: nginx
   template:
     metadata:
       labels:
@@ -43,3 +40,13 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 80
+          livenessProbe:
+            exec:
+              command:
+              - sh
+              - health.sh
+            initialDelaySeconds: 5
+            periodSeconds: 1
+  selector:
+    matchLabels:
+      app: nginx
