--- a/yamls/phpmyadmin-dep-srvc.yaml
+++ b/yamls/phpmyadmin-dep-srvc.yaml
@@ -24,9 +24,6 @@ metadata:
     app: phpmyadmin
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: phpmyadmin
   template:
     metadata:
       labels:
@@ -38,3 +35,13 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 5000
+          livenessProbe:
+           exec:
+            command:
+            - sh
+            - health.sh
+           initialDelaySeconds: 5
+           periodSeconds: 1
+  selector:
+    matchLabels:
+      app: phpmyadmin
