--- a/yamls/wordpress-dep-srvc.yaml
+++ b/yamls/wordpress-dep-srvc.yaml
@@ -23,9 +23,6 @@ metadata:
     app: wordpress
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: wordpress
   template:
     metadata:
       labels:
@@ -37,3 +34,13 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 5050
+          livenessProbe:
+           exec:
+            command:
+            - sh
+            - health.sh
+           initialDelaySeconds: 5
+           periodSeconds: 1
+  selector:
+    matchLabels:
+      app: wordpress
