--- a/srcs/yamls/wordpress-dep-srvc.yaml
+++ b/srcs/yamls/wordpress-dep-srvc.yaml
@@ -2,46 +2,45 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: phpmyadmin-service
+  name: wordpress-service
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
   labels:
-    app: phpmyadmin
+    app: wordpress
 spec:
   selector:
-    app: phpmyadmin
+    app: wordpress
   ports:
-    - port: 5000
-      targetPort: 5000
+    - port: 5050
+      targetPort: 5050
   type: LoadBalancer
-
 ---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: phpmyadmin-deployment
+  name: wordpress-deployment
   labels:
-    app: phpmyadmin
+    app: wordpress
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: phpmyadmin
+        app: wordpress
     spec:
       containers:
-        - name: phpmyadmin
-          image: local-phpmyadmin
+        - name: wordpress
+          image: local-wordpress
           imagePullPolicy: Never
           ports:
-            - containerPort: 5000
+            - containerPort: 5050
           livenessProbe:
            exec:
             command:
             - sh
             - health.sh
-           initialDelaySeconds: 5
+           initialDelaySeconds: 10
            periodSeconds: 1
   selector:
     matchLabels:
-      app: phpmyadmin
+      app: wordpress
