--- a/srcs/influxdb/srcs/telegraf.conf
+++ b/srcs/influxdb/srcs/telegraf.conf
@@ -13,7 +13,7 @@ user = "mhalli"
   debug = false
   quiet = false
   logfile = ""
-  hostname = ""
+  hostname = "influxdb:8086"
   omit_hostname = false
 
 
