--- a/srcs/yamls/influxdb.dep.srvc.yaml
+++ b/srcs/yamls/influxdb.dep.srvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: influxdb-service
+  name: influxdb
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
   labels:
@@ -31,7 +31,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: influxdb-deployment
+  name: influxdb
   labels:
     app: influxdb
 spec:
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
       - name: influxdb
-        image: local-influxdb
+        image: influxdb
         imagePullPolicy: Never
         ports:
           - containerPort: 8086
@@ -53,7 +53,7 @@ spec:
             - sh
             - health.sh
           initialDelaySeconds: 5
-          periodSeconds: 1
+          periodSeconds: 3
         volumeMounts:
         - name: influxdb-persistent-storage
           mountPath: /root/.influxdb
