--- a/srcs/yamls/mysql-dep-srvc.yaml
+++ b/srcs/yamls/mysql-dep-srvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-service
+  name: mysql
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
   labels:
@@ -31,7 +31,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql-deployment
+  name: mysql
   labels:
     app: mysql
 spec:
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: local-mysql
+        image: mysql
         imagePullPolicy: Never
         ports:
           - containerPort: 3306
@@ -53,7 +53,7 @@ spec:
             - sh
             - health.sh
           initialDelaySeconds: 5
-          periodSeconds: 1
+          periodSeconds: 3
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
