--- a/srcs/yamls/phpmyadmin-dep-srvc.yaml
+++ b/srcs/yamls/phpmyadmin-dep-srvc.yaml
@@ -2,7 +2,7 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: phpmyadmin-service
+  name: phpmyadmin
   annotations:
     metallb.universe.tf/allow-shared-ip: shared
   labels:
@@ -19,7 +19,7 @@ spec:
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: phpmyadmin-deployment
+  name: phpmyadmin
   labels:
     app: phpmyadmin
 spec:
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
         - name: phpmyadmin
-          image: local-phpmyadmin
+          image: phpmyadmin
           imagePullPolicy: Never
           ports:
             - containerPort: 5000
@@ -41,7 +41,7 @@ spec:
             - sh
             - health.sh
            initialDelaySeconds: 10
-           periodSeconds: 1
+           periodSeconds: 3
   selector:
     matchLabels:
       app: phpmyadmin
